--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
             </button>
                 <ul id="menu" role="menu">
-                    <li><a href="/">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="/">Produtos</a></li>
                     <li><a href="/">Contato</a></li>
+                    <li><a href="./formulario.html">Oportunidades</a></li>
                     <li><a href="/">Nossa Empresa</a></li>
                 </ul>  
         </nav>
@@ -200,12 +201,9 @@ Poison ivy grew through the fence they said was impenetrable. Patricia loves the
                             </p>
                         </div>
                     </div>
-                    
-
                 </div>          
             </div>   
-        </main>
-        
+        </main>   
     </section>
 
 
