--- a/formulario.html
+++ b/formulario.html
@@ -15,10 +15,10 @@
                     <span id="hamburger"></span>
                 </button>
             <ul id="menu" role="menu">
-                <li><a href="/">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="/">Produtos</a></li>
                 <li><a href="/">Contato</a></li>
-                <li><a href="/">Nossa Empresa</a></li>
+                <li><a href="./index.html">Nossa Empresa</a></li>
             </ul>  
         </nav>
     </header>
