--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </button>
                 <ul id="menu" role="menu">
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="/">Produtos</a></li>
+                    <li><a href="./Produtos/index.html">Produtos</a></li>
                     <li><a href="/">Contato</a></li>
                     <li><a href="./formulario.html">Oportunidades</a></li>
                     <li><a href="#nossa-empresa">Nossa Empresa</a></li>
