git commit -m "Padronização que ficou faltando"

--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Vaga de Emprego</title>
     <link rel="stylesheet" href="./css/formEmprego.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header id="header">
@@ -16,7 +17,7 @@
                 </button>
             <ul id="menu" role="menu">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="/">Produtos</a></li>
+                <li><a href="./Produtos/index.html">Produtos</a></li>
                 <li><a href="/">Contato</a></li>
                 <li><a href="./index.html">Nossa Empresa</a></li>
             </ul>  
@@ -83,10 +84,63 @@
                 <br>
                 <input type="submit" name="submit" value="Enviar" id="submit">
             </fieldset>
-            <br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </form>
     </div>
-   
+    <br><br><br><br>
+         <!-- Inicio do Footer -->
+    <div class="espacamento">
+        <footer>
+    <div class="container-footer">
+        <div class="row-footer">
+                <!-- Start footer Empresa -->
+            <div class="footer-col">
+                <h4>Empresa</h4>
+                <ul>
+                    <li><a href="#">Quem somos</a></li>
+                    <li><a href="#">Nossos serviços</a></li>
+                    <li><a href="#">Politica de privacidade</a></li>
+                    <li><a href="#">Programa para afiliados</a></li>
+                </ul>
+            </div>
+<!-- End footer Empresa -->
+                           <!-- Start footer Ajuda -->
+            <div class="footer-col">
+                <h4>Obter Ajuda</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Transporte</a></li>
+                    <li><a href="#">Devoluções</a></li>
+                    <li><a href="#">Status de pedido</a></li>
+                    <li><a href="#">Opções de pagamentos</a></li>
+                </ul>
+            </div>
+<!-- End footer Ajuda -->
+                        <!-- Start footer Formulario -->
+            <div class="footer-col">
+                <div>
+                        <h4>
+                            Mídias Sociais
+                        </h4>
+                </div>
+            
+<!-- End footer Formulario -->
+                             <!-- Start footer medias -->
+            
+                <div class="medias-socias">
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-instagram"></i></a>
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</footer>
+<!-- Fim do Footer -->
+    </div>
+
 
     <script src="./javascript/java-home.js"></script>
 </body>
